# datafeeds_reports

./: .gitignore  README.md  pyproject.toml  report_monthly_beneficiary_percentage.py  script.py  setup.py
.github/workflows/: testing.yml
src/datafeeds_reports/: __init__.py  __main__.py  cli.py  config.py  monthly_beneficiary_cleanup_report.py  monthly_beneficiary_percentage.py  report_monthly_beneficiary_percentage.py  utils.py
src/reports/: __init__.py  __main__.py  cli.py  common.py  config.py  monthly_beneficiary_cleanup_report.py  monthly_test_report.py  utils.py
tests/: test_config.py  test_utils.py
