[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reports"
description = "DataFeeds reports script."
version = "0.0.1"
authors = [ {name = "Salah Eddine Saoud", email = "salah.saoud@financialhorizons.ca"} ]
license = {file = "LICENSE"}
dependencies = [
    'pandas',
    'numpy',
    'click',
]

[project.scripts]
reports = "reports.__main__:main"