[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reports"
description = "DataFeeds reports script."
version = "0.0.5"
authors = [ {name = "Salah Eddine Saoud"} ]
license = {file = "LICENSE"}
dependencies = [
    'pandas',
    'numpy',
    'click',
]

[project.scripts]
reports = "reports.__main__:main"